--- a/alurabooks-aula02/index.html
+++ b/alurabooks-aula02/index.html
@@ -46,7 +46,7 @@
         </div>
     </header>
     <section class="banner">
-        <h2 class="banner__titulo">diego imã de buceta</h2>
+        <h2 class="banner__titulo">diego conquistador</h2>
         <p class="banner__texto">saiba como nosso amigo diego saiu de um repelente de mulher para um especialista em seduçao</p>
         <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
     </section>
